--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
-    "rxjs": "~6.6.0",
+    "ng-recaptcha": "^8.0.0",
+    "rxjs": "6.6.0",
+    "socket.io-client": "^4.1.2",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
